--- a/public/keys.htm
+++ b/public/keys.htm
@@ -309,6 +309,8 @@ Terpstra Keyboard WebApp | 31-ed2 Bosanquet / Wilson / Terpstra
 
 	<button id="settings-button" class="settings-button">Settings</button>
 
+	<div id="chord-display" class="chord-display"></div>
+
 	<script>
 		// Add tab functionality
 		document.querySelectorAll('.tab-button').forEach(button => {
